Add Push Notifications

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+# How to revert files if necessary??/ Upgrade Assistant, if the button stays there. Which I doubt. Mas fica aqui a nota.
+
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
